[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/Common/MapElements/Lasers/laser.gd" type="Script" id=1]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.33, 0.66, 1 )
colors = PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 1, 1, 0.6, 0, 1, 1, 0.6, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=4]
resource_local_to_scene = true
emission_shape = 5
emission_ring_radius = 1.5
emission_ring_inner_radius = 1.0
emission_ring_height = 2.5
emission_ring_axis = Vector3( 0, 0, 1 )
flag_rotate_y = true
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
angular_velocity = 3.0
angular_velocity_random = 0.5
angle = 90.0
angle_random = 1.0
scale = 0.25
scale_random = 0.5
color_ramp = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.33, 0.33, 0.33 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
albedo_color = Color( 1, 0.509804, 0.509804, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 10.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=1]
resource_local_to_scene = true
material = SubResource( 3 )
radial_segments = 16
rings = 2

[sub_resource type="CylinderShape" id=2]
resource_local_to_scene = true

[node name="Laser" type="Area" groups=["update_editor"]]
collision_layer = 8
script = ExtResource( 1 )

[node name="Particles" type="Particles" parent="."]
amount = 12
lifetime = 0.5
visibility_aabb = AABB( -2.04237, -1.83604, -1.48961, 3.60754, 3.82853, 3.98091 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 8 )

[node name="LaserMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="LaserCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 50 )
collision_mask = 3

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
__meta__ = {
"_editor_description_": "A timer to limit the laser updates, and avoid using physics process and slowing down the game"
}
